# PyGeometry

./: CMakeLists.txt  geomertry_interface.cxx  main.cpp
base/: vector2.hpp
geometry/g2d/: functions.hpp  structure.hpp
test_py/: test.py
